--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,27 +1,31 @@
 # Visit https://golangci-lint.run/ for usage documentation
 # and information on other useful linters
+version: "2"
+
+run:
+  timeout: 5m
+  go: '1.25'
+
 issues:
-  max-per-linter: 0
+  max-issues-per-linter: 0
   max-same-issues: 0
 
 linters:
-  disable-all: true
   enable:
     - durationcheck
     - errcheck
-    - exportloopref
     - forcetypeassert
-    # - godot
-    - gofmt
-    - gosimple
     - ineffassign
     - makezero
     - misspell
     - nilerr
     - predeclared
     - staticcheck
-    - tenv
     - unconvert
     - unparam
     - unused
     - govet
+
+formatters:
+  enable:
+    - gofmt
